--- a/CoreFramework/test-output/old/Stock Suite/methods-alphabetical.html
+++ b/CoreFramework/test-output/old/Stock Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Stock Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f777e8">  <td>18/09/12 21:26:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDelStockTest.addStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">addStockTest</td> 
-  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="a5f292">  <td>18/09/12 21:26:30</td>   <td>186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.buyOrSellStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">buyOrSellStockTest</td> 
-  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="a5f292">  <td>18/09/12 21:26:30</td>   <td>254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.checkTransactionHistoryTest(java.util.Hashtable)[pri:2, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">checkTransactionHistoryTest</td> 
-  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>-135</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>78</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
-<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="70b3e1">  <td>18/10/17 23:32:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDelStockTest.addStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">addStockTest</td> 
+  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="9ad2d6">  <td>18/10/17 23:32:14</td>   <td>165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.buyOrSellStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">buyOrSellStockTest</td> 
+  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="9ad2d6">  <td>18/10/17 23:32:14</td>   <td>236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.checkTransactionHistoryTest(java.util.Hashtable)[pri:2, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">checkTransactionHistoryTest</td> 
+  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>-79</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>98</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
 </table>
